# shirokuro-server

./: .gitignore  .gitmodules  Dockerfile  README.md  README.rst  manage.py  pyproject.toml  scratch.py
account/: schema.py
account/tests/: conftest.py
account/types/: user_type.py
database/models/: title.py
database/models/abstract/: localization_fields.py
docs/source/: conf.py  index.rst
extra/scripts/: reset.sh  yapf.sh
internationalization/: migration.py
internationalization/enums/: bcp47_type.py
internationalization/migrations/: 0001_initial.py  0002_script_source_data.py  0003_languagescope_language.py  0004_alter_language_iso_639_1_alter_language_iso_639_2_and_more.py  0005_alter_script_comments.py  0006_rename_preferred_value_script_preferred_value_script_and_more.py  0007_language_preferred_value_language.py  0008_language_comments.py  0009_region_regionofficiallanguage_and_more.py  0010_alter_region_official_languages_regionusedlanguage_and_more.py
internationalization/models/: __init__.py  language.py  language_scope.py  region.py  region_official_language.py  region_used_language.py  script.py
internationalization/models/abstract/: main_fields.py
internationalization/models/fields/: custom_array_field.py
internationalization/repositories/bcp47/: bcp47_interface.py  bcp47_repository.py  type_aliases.py
internationalization/resolvers/: language.py
internationalization/tests/: conftest.py
shirokuro/: asgi.py  schema.py  settings.py  urls.py
shirokuro_server/shirokuro/: settings.py  wsgi.py
(+8466 files in other folders)
